--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
             }
         });
 
-        async function toggleTaskStatus(index, currentStatus) {
+        async function toggleTaskStatus(cod, currentStatus) {
             const newStatus = currentStatus === 'pendente' ? 'concluido' : 'pendente';
             try {
-                const response = await fetch(`${apiUrl}/${index}/status`, {
+                const response = await fetch(`${apiUrl}/${cod}/status`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
@@ -153,8 +153,8 @@
 
                 if (response.ok) {
                     const updatedTask = await response.json();
-                    location.reload();
                     console.log('Status atualizado com sucesso:', updatedTask);
+                    loadTasks();
                 } else {
                     console.error('Erro ao atualizar status:', response.statusText);
                 }
@@ -173,15 +173,15 @@
                 const taskList = document.getElementById('taskList');
                 taskList.innerHTML = '';
 
-                tasks.forEach((task, index) => {
+                tasks.forEach((task, cod) => {
                     const taskItem = document.createElement('div');
                     taskItem.className = 'task-item';
                     taskItem.innerHTML = `
-                        <strong>${index}: ${task.titulo}</strong>
+                        <strong>${task.cod}: ${task.titulo}</strong>
                         <p>${task.descricao}</p>
                         <p>Status: ${task.status}</p>
                         <p>Data de Criação: ${new Date(task.dataCriacao).toLocaleString()}</p>
-                        <button onclick="toggleTaskStatus(${index}, '${task.status}')">Alterar Status</button>
+                        <button onclick="toggleTaskStatus(${task.cod}, '${task.status}')">Alterar Status</button>
                     `;
                     taskList.appendChild(taskItem);
                 });
