--- a/src/login.html
+++ b/src/login.html
@@ -18,6 +18,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
         }
         .form-group {
             margin-bottom: 15px;
@@ -47,38 +48,68 @@
             color: red;
             margin-bottom: 15px;
         }
+        .hidden {
+            display: none;
+        }
+        .toggle-buttons {
+            display: flex;
+            justify-content: space-between;
+        }
+        .toggle-buttons button {
+            width: 48%;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Login</h2>
-        <div id="login-error" class="error"></div>
-        <div class="form-group">
-            <label for="login-username">Username</label>
-            <input type="text" id="login-username" required>
+        <div id="login-form">
+            <h2>Login</h2>
+            <div id="login-error" class="error"></div>
+            <div class="form-group">
+                <label for="login-username">Usuário</label>
+                <input type="text" id="login-username" required>
+            </div>
+            <div class="form-group">
+                <label for="login-password">Senha</label>
+                <input type="password" id="login-password" required>
+            </div>
+            <div class="form-group toggle-buttons">
+                <button onclick="login()">Login</button>
+                <button onclick="showRegister()">Criar Nova Conta</button>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" required>
-        </div>
-        <div class="form-group">
-            <button onclick="login()">Login</button>
-        </div>
-        <h2>Register</h2>
-        <div id="register-error" class="error"></div>
-        <div class="form-group">
-            <label for="register-username">Username</label>
-            <input type="text" id="register-username" required>
-        </div>
-        <div class="form-group">
-            <label for="register-password">Password</label>
-            <input type="password" id="register-password" required>
-        </div>
-        <div class="form-group">
-            <button onclick="register()">Register</button>
+        <div id="register-form" class="hidden">
+            <h2>Register</h2>
+            <div id="register-error" class="error"></div>
+            <div class="form-group">
+                <label for="register-username">Usuário</label>
+                <input type="text" id="register-username" required>
+            </div>
+            <div class="form-group">
+                <label for="register-password">Senha</label>
+                <input type="password" id="register-password" required>
+            </div>
+            <div class="form-group">
+                <label for="register-confirm-password">Confirmar senha</label>
+                <input type="password" id="register-confirm-password" required>
+            </div>
+            <div class="form-group toggle-buttons" >
+                <button onclick="register()">Registrar</button>
+                <button onclick="showLogin()">Voltar ao login</button>
+            </div>
         </div>
     </div>
     <script>
+        function showLogin() {
+            document.getElementById('login-form').classList.remove('hidden');
+            document.getElementById('register-form').classList.add('hidden');
+        }
+
+        function showRegister() {
+            document.getElementById('login-form').classList.add('hidden');
+            document.getElementById('register-form').classList.remove('hidden');
+        }
+
         async function login() {
             const username = document.getElementById('login-username').value;
             const password = document.getElementById('login-password').value;
@@ -105,6 +136,13 @@
         async function register() {
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
+            const confirmPassword = document.getElementById('register-confirm-password').value;
+
+            if (password !== confirmPassword) {
+                document.getElementById('register-error').textContent = 'As senhas não coincidem';
+                return;
+            }
+
             try {
                 const response = await fetch('http://localhost:3000/register', {
                     method: 'POST',
@@ -123,6 +161,16 @@
                 document.getElementById('register-error').textContent = 'Erro ao registrar usuário';
             }
         }
+
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                if (!document.getElementById('login-form').classList.contains('hidden')) {
+                    login();
+                } else if (!document.getElementById('register-form').classList.contains('hidden')) {
+                    register();
+                }
+            }
+        });
     </script>
 </body>
 </html>
