--- a/src/crudusers.html
+++ b/src/crudusers.html
@@ -55,6 +55,17 @@
             color: red;
             margin-bottom: 15px;
         }
+
+        .delete-button {
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .delete-button img {
+            width: 24px;
+            height: 24px;
+        }
     </style>
 </head>
 <body>
@@ -105,6 +116,11 @@
                         <td>
                             <button onclick="updateUserLevel('${user._id}')">Atualizar Nível</button>
                         </td>
+                        <td>
+                            <button class="delete-button" onclick="deleteUser('${user._id}')">
+                                <img src="assets/bin.png" alt="Deletar">
+                            </button>
+                        </td>
                     `;
                     userTableBody.appendChild(row);
                 });
@@ -133,6 +149,25 @@
                 alert('Nível do usuário atualizado com sucesso');
             } catch (error) {
                 alert(error.message);
+            }
+        }
+
+        async function deleteUser(userId) {
+            const token = localStorage.getItem('token');
+            try {
+                const response = await fetch(`http://localhost:3000/users/${userId}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Authorization': `Bearer ${token}`
+                    }
+                });
+                if (!response.ok) {
+                    throw new Error('Erro ao deletar usuário');
+                }
+                alert('Usuário deletado com sucesso');
+                location.reload(); // Recarrega a página para atualizar a lista de usuários
+            } catch (error) {
+                document.getElementById('error').textContent = error.message;
             }
         }
     </script>
