--- a/src/login.html
+++ b/src/login.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div id="register-form" class="hidden">
-            <h2>Register</h2>
+            <h2>Criar uma nova conta</h2>
             <div id="register-error" class="error"></div>
             <div class="form-group">
                 <label for="register-username">Usuário</label>
