--- a/src/crudtarefas.html
+++ b/src/crudtarefas.html
@@ -4,16 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD de Tarefas</title>
+    <title>Gerenciamento de Tarefas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f0f0f0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
         }
 
         .container {
-            max-width: 600px;
-            margin: 0 auto;
+            background-color: #fff;
             padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            min-width: 60%;
+        }
+
+        .container button {
+            width: 40%;
+            padding: 10px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        form label {
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        form input,
+        form textarea {
+            margin-bottom: 15px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .task-list {
@@ -21,7 +63,10 @@
         }
 
         .task-item {
-            border: 1px solid #ccc;
+            border: 2px solid #007bff;
+            /* Define a cor e a espessura da borda */
+            border-radius: 4px;
+            /* Define as pontas arredondadas */
             padding: 10px;
             margin-bottom: 10px;
         }
@@ -41,17 +86,17 @@
         .menu a:hover {
             text-decoration: underline;
         }
-
     </style>
 </head>
 
 <body>
     <div class="menu">
+        <a href="landing.html">Tarefas</a>
         <a href="crudusers.html" onclick="return blockUserCRUDAccess()">CRUD de Usuários</a>
         <a href="changepw.html">Mudar senha</a>
     </div>
     <div class="container">
-        <h1>CRUD de Tarefas</h1>
+        <h1>Gerenciamento de Tarefas</h1>
         <form id="addTaskForm">
             <h2>Adicionar Tarefa</h2>
             <input type="text" id="titulo" placeholder="Título" required>
@@ -64,7 +109,6 @@
             <input type="number" id="updateIndex" placeholder="Índice" required>
             <input type="text" id="updateTitulo" placeholder="Novo Título" required>
             <input type="text" id="updateDescricao" placeholder="Nova Descrição" required>
-            <input type="text" id="updateStatus" placeholder="Novo Status" required>
             <button type="submit">Atualizar</button>
         </form>
 
@@ -117,15 +161,21 @@
             const index = document.getElementById('updateIndex').value;
             const titulo = document.getElementById('updateTitulo').value;
             const descricao = document.getElementById('updateDescricao').value;
-            const status = document.getElementById('updateStatus').value;
-
+            if (!titulo || !descricao || !index) {
+                alert('Título, descrição e o ID são obrigatórios.');
+                return;
+            }
+            if (status === 'concluido') {
+                alert('Tarefa concluída não pode ser atualizada.');
+                return;
+            }
             try {
                 const response = await fetch(`${apiUrl}/${index}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ id: index, titulo, descricao, status })
+                    body: JSON.stringify({ id: index, titulo, descricao, status: 'pendente' })
                 });
 
                 if (response.ok) {
@@ -216,7 +266,7 @@
             try {
                 const base64Url = token.split('.')[1];
                 const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
                     return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
                 }).join(''));
                 return JSON.parse(jsonPayload);
