--- a/public/login.html
+++ b/public/login.html
@@ -124,7 +124,7 @@
                 const data = await response.json();
                 if (response.ok) {
                     localStorage.setItem('token', data.token);
-                    window.location.href = '/src/landing.html';
+                    window.location.href = 'landing.html';
                 } else {
                     document.getElementById('login-error').textContent = data.error;
                 }
