frontend arch up n running

--- a/public/changepw.html
+++ b/public/changepw.html
@@ -24,6 +24,7 @@
         <div id="message" class="error"></div>
     </div>
     <script src="../scripts/changepw.js"></script>
+    <script src="../scripts/auth.js"></script>
 </body>
 
 </html>
