--- a/public/crudtarefas.html
+++ b/public/crudtarefas.html
@@ -5,88 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de Tarefas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #f0f0f0;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            min-width: 60%;
-        }
-
-        .container button {
-            width: 40%;
-            padding: 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        form label {
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-
-        form input,
-        form textarea {
-            margin-bottom: 15px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-        .task-list {
-            margin-top: 20px;
-        }
-
-        .task-item {
-            border: 2px solid #007bff;
-            /* Define a cor e a espessura da borda */
-            border-radius: 4px;
-            /* Define as pontas arredondadas */
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        .menu {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        .menu a {
-            margin-left: 10px;
-            text-decoration: none;
-            color: #007bff;
-        }
-
-        .menu a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/crudtarefas.css">
 </head>
 
 <body>
@@ -122,177 +41,9 @@
         <div id="taskList" class="task-list"></div>
     </div>
 
-    <script>
-        const apiUrl = 'http://localhost:3000/tarefa';
-
-        document.getElementById('addTaskForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const titulo = document.getElementById('titulo').value;
-            const descricao = document.getElementById('descricao').value;
-
-            try {
-                const response = await fetch(apiUrl);
-                const tasks = await response.json();
-                const maxId = tasks.reduce((max, task) => task.id > max ? task.id : max, 0);
-                const newId = maxId + 1;
-
-                const addResponse = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ id: newId, titulo, descricao, status: 'pendente' })
-                });
-
-                if (addResponse.ok) {
-                    alert('Tarefa adicionada com sucesso!');
-                    loadTasks();
-                } else {
-                    alert('Erro ao adicionar tarefa.');
-                }
-            } catch (error) {
-                console.error('Erro ao fazer a requisição:', error);
-                alert('Erro ao fazer a requisição.');
-            }
-        });
-
-        document.getElementById('updateTaskForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const index = document.getElementById('updateIndex').value;
-            const titulo = document.getElementById('updateTitulo').value;
-            const descricao = document.getElementById('updateDescricao').value;
-            if (!titulo || !descricao || !index) {
-                alert('Título, descrição e o ID são obrigatórios.');
-                return;
-            }
-            if (status === 'concluido') {
-                alert('Tarefa concluída não pode ser atualizada.');
-                return;
-            }
-            try {
-                const response = await fetch(`${apiUrl}/${index}`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ id: index, titulo, descricao, status: 'pendente' })
-                });
-
-                if (response.ok) {
-                    alert('Tarefa atualizada com sucesso!');
-                    loadTasks();
-                } else {
-                    alert('Erro ao atualizar tarefa.');
-                }
-            } catch (error) {
-                console.error('Erro ao fazer a requisição:', error);
-                alert('Erro ao fazer a requisição.');
-            }
-        });
-
-        document.getElementById('deleteTaskForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const index = document.getElementById('deleteIndex').value;
-
-            try {
-                const response = await fetch(`${apiUrl}/${index}`, {
-                    method: 'DELETE'
-                });
-
-                if (response.ok) {
-                    alert('Tarefa removida com sucesso!');
-                    loadTasks();
-                } else {
-                    alert('Erro ao remover tarefa.');
-                }
-            } catch (error) {
-                console.error('Erro ao fazer a requisição:', error);
-                alert('Erro ao fazer a requisição.');
-            }
-        });
-
-        async function toggleTaskStatus(cod, currentStatus) {
-            const newStatus = currentStatus === 'pendente' ? 'concluido' : 'pendente';
-            try {
-                const response = await fetch(`${apiUrl}/${cod}/status`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ status: newStatus })
-                });
-
-                if (response.ok) {
-                    const updatedTask = await response.json();
-                    console.log('Status atualizado com sucesso:', updatedTask);
-                    loadTasks();
-                } else {
-                    console.error('Erro ao atualizar status:', response.statusText);
-                }
-            } catch (error) {
-                console.error('Erro ao atualizar status:', error);
-            }
-        }
-
-        async function loadTasks() {
-            try {
-                const response = await fetch(apiUrl);
-                if (!response.ok) {
-                    throw new Error(`Erro ao carregar tarefas: ${response.statusText}`);
-                }
-                const tasks = await response.json();
-                const taskList = document.getElementById('taskList');
-                taskList.innerHTML = '';
-
-                tasks.forEach((task, cod) => {
-                    const taskItem = document.createElement('div');
-                    taskItem.className = 'task-item';
-                    taskItem.innerHTML = `
-                        <strong>${task.cod}: ${task.titulo}</strong>
-                        <p>${task.descricao}</p>
-                        <p>Status: ${task.status}</p>
-                        <p>Data de Criação: ${new Date(task.dataCriacao).toLocaleString()}</p>
-                        <button onclick="toggleTaskStatus(${task.cod}, '${task.status}')">Alterar Status</button>
-                    `;
-                    taskList.appendChild(taskItem);
-                });
-            } catch (error) {
-                console.error('Erro ao carregar tarefas:', error);
-                alert('Erro ao carregar tarefas.');
-            }
-        }
-
-        function parseJwt(token) {
-            try {
-                const base64Url = token.split('.')[1];
-                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
-                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-                }).join(''));
-                return JSON.parse(jsonPayload);
-            } catch (e) {
-                return null;
-            }
-        }
-
-        function blockUserCRUDAccess() {
-            const token = localStorage.getItem('token');
-            if (!token) {
-                alert('Você não tem acesso a essa funcionalidade');
-                return false;
-            }
-
-            const decodedToken = parseJwt(token);
-            if (decodedToken && decodedToken.level === 3) {
-                return true;
-            } else {
-                alert('Você não tem acesso a essa funcionalidade');
-                return false;
-            }
-        }
-
-        loadTasks();
-    </script>
+    <script src="../scripts/landing.js"></script>
+    <script src="../scripts/crudtarefas.js"></script>
+    <script src="../scripts/auth.js"></script>
 </body>
 
 </html>
