--- a/public/crudusers.html
+++ b/public/crudusers.html
@@ -5,105 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD de Usuários</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            min-width: 40%;
-        }
-
-        table {
-            width: 80%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            align-content: center;
-        }
-
-        table,
-        th,
-        td {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            width: 100%;
-            table-layout: fixed;
-        }
-
-        th,
-        td {
-            border: 2px solid #007bff;
-            padding: 10px;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        td button{
-            padding: 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        .dropdown {
-            margin-bottom: 15px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-        .delete-button {
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
-
-        .delete-button img {
-            width: 24px;
-            height: 24px;
-        }
-
-        .menu {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        .menu a {
-            margin-left: 10px;
-            text-decoration: none;
-            color: #007bff;
-        }
-
-        .menu a:hover {
-            text-decoration: underline;
-        }
-
-    </style>
+    <link rel="stylesheet" href="../styles/crudusers.css">
 </head>
 
 <body>
@@ -130,94 +32,8 @@
         </table>
     </div>
     
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            const token = localStorage.getItem('token');
-            if (!token) {
-                document.getElementById('error').textContent = 'Acesso negado. Faça login como um usuário de nível 3.';
-                return;
-            }
-
-            try {
-                const response = await fetch('http://localhost:3000/users', {
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-                if (!response.ok) {
-                    throw new Error('Acesso negado');
-                }
-                const users = await response.json();
-                const userTableBody = document.getElementById('user-table-body');
-                users.forEach(user => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${user.username}</td>
-                        <td>
-                            <select class="dropdown" data-user-id="${user._id}">
-                                <option value="1" ${user.level === 1 ? 'selected' : ''}>1</option>
-                                <option value="2" ${user.level === 2 ? 'selected' : ''}>2</option>
-                                <option value="3" ${user.level === 3 ? 'selected' : ''}>3</option>
-                            </select>
-                        </td>
-                        <td>
-                            <button onclick="updateUserLevel('${user._id}')">Atualizar Nível</button>
-                        </td>
-                        <td>
-                            <button class="delete-button" onclick="deleteUser('${user._id}')">
-                                <img src="assets/bin.png" alt="Deletar">
-                            </button>
-                        </td>
-                    `;
-                    userTableBody.appendChild(row);
-                });
-            } catch (error) {
-                document.getElementById('error').textContent = error.message;
-            }
-        });
-
-        async function updateUserLevel(userId) {
-            const token = localStorage.getItem('token');
-            const selectElement = document.querySelector(`select[data-user-id="${userId}"]`);
-            const newLevel = selectElement.value;
-
-            try {
-                const response = await fetch(`http://localhost:3000/users/${userId}/level`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${token}`
-                    },
-                    body: JSON.stringify({ level: newLevel })
-                });
-                if (!response.ok) {
-                    throw new Error('Erro ao atualizar nível do usuário');
-                }
-                alert('Nível do usuário atualizado com sucesso');
-            } catch (error) {
-                alert(error.message);
-            }
-        }
-
-        async function deleteUser(userId) {
-            const token = localStorage.getItem('token');
-            try {
-                const response = await fetch(`http://localhost:3000/users/${userId}`, {
-                    method: 'DELETE',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    }
-                });
-                if (!response.ok) {
-                    throw new Error('Erro ao deletar usuário');
-                }
-                alert('Usuário deletado com sucesso');
-                location.reload(); // Recarrega a página para atualizar a lista de usuários
-            } catch (error) {
-                document.getElementById('error').textContent = error.message;
-            }
-        }
-    </script>
+    <script src="../scripts/crudusers.js"></script>
+    <script src="../scripts/auth.js"></script>
 </body>
 
 </html>
