--- a/public/landing.html
+++ b/public/landing.html
@@ -5,66 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f0f0f0;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            min-width: 40%;
-        }
-
-        .container button {
-            width: 40%;
-            padding: 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .task-list {
-            margin-top: 20px;
-        }
-
-        .task-item {
-            border: 2px solid #007bff; /* Define a cor e a espessura da borda */
-            border-radius: 4px; /* Define as pontas arredondadas */
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        .menu {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        .menu a {
-            margin-left: 10px;
-            text-decoration: none;
-            color: #007bff;
-        }
-
-        .menu a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/landing.css">
 </head>
 
 <body>
@@ -77,104 +18,6 @@
         <h1>Lista de Tarefas</h1>
         <div id="taskList" class="task-list"></div>
     </div>
-    <script>
-        const apiUrl = 'http://localhost:3000/tarefa';
-
-        async function loadTasks() {
-            try {
-                const response = await fetch(apiUrl);
-                if (!response.ok) {
-                    throw new Error(`Erro ao carregar tarefas: ${response.statusText}`);
-                }
-                const tasks = await response.json();
-                const taskList = document.getElementById('taskList');
-                taskList.innerHTML = '';
-
-                tasks.forEach((task, cod) => {
-                    const taskItem = document.createElement('div');
-                    taskItem.className = 'task-item';
-                    taskItem.innerHTML = `
-                        <strong>${task.cod}: ${task.titulo}</strong>
-                        <p>${task.descricao}</p>
-                        <p>Status: ${task.status}</p>
-                        <p>Data de Criação: ${new Date(task.dataCriacao).toLocaleString()}</p>
-                        <button onclick="toggleTaskStatus(${task.cod}, '${task.status}')">Alterar Status</button>
-                    `;
-                    taskList.appendChild(taskItem);
-                });
-            } catch (error) {
-                console.error('Erro ao carregar tarefas:', error);
-                alert('Erro ao carregar tarefas.');
-            }
-        }
-
-        async function toggleTaskStatus(cod, currentStatus) {
-            const newStatus = currentStatus === 'pendente' ? 'concluido' : 'pendente';
-            try {
-                const response = await fetch(`${apiUrl}/${cod}/status`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ status: newStatus })
-                });
-
-                if (response.ok) {
-                    const updatedTask = await response.json();
-                    console.log('Status atualizado com sucesso:', updatedTask);
-                    loadTasks();
-                } else {
-                    console.error('Erro ao atualizar status:', response.statusText);
-                }
-            } catch (error) {
-                console.error('Erro ao atualizar status:', error);
-            }
-        }
-
-        function parseJwt(token) {
-            try {
-                const base64Url = token.split('.')[1];
-                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
-                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-                }).join(''));
-                return JSON.parse(jsonPayload);
-            } catch (e) {
-                return null;
-            }
-        }
-
-        function blockUserCRUDAccess() {
-            const token = localStorage.getItem('token');
-            if (!token) {
-                alert('Você não tem acesso a essa funcionalidade');
-                return false;
-            }
-
-            const decodedToken = parseJwt(token);
-            if (decodedToken && decodedToken.level === 3) {
-                return true;
-            } else {
-                alert('Você não tem acesso a essa funcionalidade');
-                return false;
-            }
-        }
-
-        function blockTarefaCRUDAccess() {
-            const token = localStorage.getItem('token');
-            if (!token) {
-                alert('Você não tem acesso a essa funcionalidade');
-                return false;
-            }
-
-            const decodedToken = parseJwt(token);
-            if (decodedToken && decodedToken.level >= 2) {
-                return true;
-            } else {
-                alert('Você não tem acesso a essa funcionalidade');
-                return false;
-            }
-        }
-
-        loadTasks();
-    </script>
+    <script src="../scripts/landing.js"></script>
+</body>
+</html>
