--- a/public/login.html
+++ b/public/login.html
@@ -4,61 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-        .form-group button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .form-group button:hover {
-            background-color: #0056b3;
-        }
-        .error {
-            color: red;
-            margin-bottom: 15px;
-        }
-        .hidden {
-            display: none;
-        }
-        .toggle-buttons {
-            display: flex;
-            justify-content: space-between;
-        }
-        .toggle-buttons button {
-            width: 48%;
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
     <div class="container">
@@ -99,78 +45,6 @@
             </div>
         </div>
     </div>
-    <script>
-        function showLogin() {
-            document.getElementById('login-form').classList.remove('hidden');
-            document.getElementById('register-form').classList.add('hidden');
-        }
-
-        function showRegister() {
-            document.getElementById('login-form').classList.add('hidden');
-            document.getElementById('register-form').classList.remove('hidden');
-        }
-
-        async function login() {
-            const username = document.getElementById('login-username').value;
-            const password = document.getElementById('login-password').value;
-            try {
-                const response = await fetch('http://localhost:3000/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ username, password })
-                });
-                const data = await response.json();
-                if (response.ok) {
-                    localStorage.setItem('token', data.token);
-                    window.location.href = 'landing.html';
-                } else {
-                    document.getElementById('login-error').textContent = data.error;
-                }
-            } catch (error) {
-                document.getElementById('login-error').textContent = 'Erro ao fazer login';
-            }
-        }
-
-        async function register() {
-            const username = document.getElementById('register-username').value;
-            const password = document.getElementById('register-password').value;
-            const confirmPassword = document.getElementById('register-confirm-password').value;
-
-            if (password !== confirmPassword) {
-                document.getElementById('register-error').textContent = 'As senhas não coincidem';
-                return;
-            }
-
-            try {
-                const response = await fetch('http://localhost:3000/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ username, password })
-                });
-                const data = response.ok ? await response.json() : null;
-                if (response.ok) {
-                    document.getElementById('register-error').textContent = 'Usuário registrado com sucesso. Agora você pode fazer login.';
-                } else {
-                    document.getElementById('register-error').textContent = data ? data.error : 'Erro ao registrar usuário';
-                }
-            } catch (error) {
-                document.getElementById('register-error').textContent = 'Erro ao registrar usuário';
-            }
-        }
-
-        document.addEventListener('keydown', function(event) {
-            if (event.key === 'Enter') {
-                if (!document.getElementById('login-form').classList.contains('hidden')) {
-                    login();
-                } else if (!document.getElementById('register-form').classList.contains('hidden')) {
-                    register();
-                }
-            }
-        });
-    </script>
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
