auth system fixed

--- a/public/landing.html
+++ b/public/landing.html
@@ -19,5 +19,6 @@
         <div id="taskList" class="task-list"></div>
     </div>
     <script src="../scripts/landing.js"></script>
+    <script src="../scripts/auth.js"></script>
 </body>
 </html>
