--- a/public/crudusers.html
+++ b/public/crudusers.html
@@ -17,6 +17,7 @@
     
     <div class="container">
         <h1>Gerenciamento de Usuários</h1>
+        <div id="error" class="error"></div> <!-- Adicionado para exibir mensagens de erro -->
         <table>
             <thead>
                 <tr>
